# oscpython

./: .coveragerc  .gitignore  README.md  pytest.ini  requirements-dev.txt  setup.cfg
.github/workflows/: python-package.yml
doc/source/: conf.py  index.rst
doc/source/reference/: address.rst  arguments.rst  common.rst  index.rst  messages.rst  transport.rst
src/oscpython/: __init__.py  address.py  arguments.py  common.py  messages.py  transport.py
tests/: conftest.py  test_address_node.py  test_argument_list.py  test_arguments.py  test_packets.py  test_pattern_matching.py  test_timetag.py  test_transport.py
