[bdist_wheel]
universal = True

[metadata]
name = oscpython
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/oscpython
description = Open Sound Control Client and Server
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
python_requires = 3.7
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
exclude = tests


[options.package_data]
* = LICENSE, README.md

[tool:pytest]
testpaths = tests
